<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp"
    android:clipToPadding="false"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp"
    app:cardMaxElevation="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@color/blue_1">

            <ProgressBar
                android:id="@+id/pb_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminateTint="@color/gold_2"
                android:padding="24dp" />

            <ImageView
                android:id="@+id/img_broken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/broken_image"
                android:padding="24dp"
                android:src="@drawable/ic_broken"
                android:visibility="gone"
                app:tint="@color/gold_2" />

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_image"
                android:scaleType="centerCrop"
                tools:src="@color/blue_1" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:numStars="5"
                    android:theme="@style/MyRatingBar"
                    tools:rating="1.5" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/os_bold"
                    android:textColor="@color/blue_1"
                    android:textSize="16sp"
                    tools:text="@string/sample_title" />

                <TextView
                    android:id="@+id/tv_released_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/os_regular"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:text="@string/sample_released_on" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/os_regular"
                android:singleLine="true"
                android:textColor="@color/blue_1"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/sample_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>